# baby-nes

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/extractor/: mod.rs  sprite_writer.rs
src/nes/: bus.rs  cpu.rs  mod.rs  ppu.rs  ram.rs
src/nes/cartridge/: flag6.rs  header.rs  mod.rs
src/nes/cpu/: bus.rs  cpu.rs  fetch.rs  instructions.rs  opecode.rs  registers.rs
src/nes/cpu/instructions/: arithmetic.rs  branch.rs  decrement.rs  flags.rs  increment.rs  jump.rs  load.rs  logical.rs  shift.rs  stack.rs  store.rs  system.rs  transfer.rs
src/nes/ppu/: background.rs  bus.rs  frame.rs  palette.rs  palette_ram.rs  pattern_table.rs  ppu.rs  registers.rs  render.rs  sprite.rs  tile.rs  tile_position.rs
src/nes/ppu/registers/: oam.rs  ppu_address.rs  ppu_control.rs  ppu_data.rs  ppu_mask.rs  ppu_scroll.rs  ppu_status.rs
