[package]
name = "rust-nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
arrayref = "0.3.6"
bitflags = "1.3.2"
clap = { version = "4.3.21", features = ["derive"] }
image = "0.24.1"
once_cell = "1.18.0"
sdl2 = "0.35.2"

[features]
